# llm-writer

./: .gitignore  README.md  main.py  ollama.py  prompts.py  pyproject.toml  requirements-sdxlturbo.txt  requirements-torch-windows-cuda12.txt  requirements.txt
app/: fileio.py  main.py  ollama.py  prompts.py  sdxlturbo.py
experiments/: basic_gradio_app.py  markov.py  test_ollama_api.py  textual_stream.py
inputs/: summary.txt
inputs-outputs/: summary.txt  text.txt
llm_writer/: __init__.py  __main__.py  app.py  async_wrapper.py  custom_style.py  engine_ollama.py  fileio.py  gradio_app.py  parse_generate.py  prompts.py  textual.tcss  textual_cli.py
llm_writer/experiments/: gen.py  gradio_stream.py
src/: app.py  prompts.py  style.py
