[tool.poetry]
name = "llm_writer"
version = "0.1.0"
description = ""
authors = ["kyrlian <kyrlian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.40.0"
textual = "^0.75.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llmwriter = "llm_writer.textual_cli:main"
llmw = "llm_writer.textual_cli:main"
llmwg = "llm_writer.gradio_app:main"
llmwriter_webui= "llm_writer.gradio_app:main"
