[project]
name = "llm-writer"
version = "0.1.0"
description = "LLM assisted writing console"
authors = [{name ="kyrlian", email= "kyrlian@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.44.0",
    "textual>=0.81.0",
]

[project.scripts]
llmwriter = "llm_writer.textual_cli:main"
llmw = "llm_writer.textual_cli:main"
llmwg = "llm_writer.gradio_app:main"
llmwriter_webui= "llm_writer.gradio_app:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
